--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
         KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
         STORE_PASSWORD: ${{ secrets.STORE_PASSWORD }}
         STORE_FILE: ${{ env.STORE_FILE }}
-      run: flutter build apk --split-per-abi --target-platform android-arm64,android-armeabi-v7a --split-debug-info build/app/outputs/symbols
+      run: flutter build apk --split-per-abi --target-platform android-arm64,android-arm --split-debug-info build/app/outputs/symbols
     - name: Create Release
       uses: ncipollo/release-action@v1
       with:
