--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,10 +25,13 @@ jobs:
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
-        channel: 'stable'
+        channel: stable
+        flutter-version-file: pubspec.yaml
         cache: true
-        cache-key: 'flutter-:os:-:channel:-:version:-:arch:-:hash:'
+        cache-key: "flutter-:os:-:channel:-:version:-:arch:-:hash:"
         cache-path: "${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:"
+        pub-cache-key: "flutter-pub:os:-:channel:-:version:-:arch:-:hash:"
+        pub-cache-path: "${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:"
     - name: Build KeyStore
       run: echo ${{ secrets.STORE_BASE64 }} | base64 -d > ${{ env.STORE_FILE }}
     - name: Build Flutter
