--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.0.7
+version: 0.0.8
 
 environment:
   sdk: ^3.5.3
@@ -34,6 +34,7 @@ dependencies:
   shared_preferences: ^2.3.2
   flutter_native_splash: ^2.4.1
   url_launcher: ^6.3.1
+  dynamic_color: ^1.7.0
 
 dev_dependencies:
   flutter_test:
