--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   media_kit: ^1.1.11
   media_kit_video: ^1.2.5
   media_kit_libs_video: ^1.0.5
+  flutter_native_splash: ^2.4.2
 
 dev_dependencies:
   flutter_test:
@@ -55,3 +56,6 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   uses-material-design: true
+
+flutter_native_splash:
+  color: "#42a5f5"
