--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   media_kit_video: ^1.2.5
   media_kit_libs_video: ^1.0.5
   flutter_native_splash: ^2.4.2
+  package_info_plus: ^8.1.0
 
 dev_dependencies:
   flutter_test:
