--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,6 +5,12 @@ plugins {
     id "dev.flutter.flutter-gradle-plugin"
 }
 
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('key.properties')
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
+
 android {
     namespace = "es.pablouser1.lightbluesky"
     compileSdk = flutter.compileSdkVersion
@@ -31,10 +37,10 @@ android {
 
     signingConfigs {
         release {
-            keyAlias = System.getenv('KEY_ALIAS')
-            keyPassword = System.getenv('KEY_PASSWORD')
-            storeFile = System.getenv('STORE_FILE') ? file(System.getenv('STORE_FILE')) : null
-            storePassword = System.getenv('STORE_PASSWORD')
+            keyAlias = keystoreProperties['keyAlias']
+            keyPassword = keystoreProperties['keyPassword']
+            storeFile = keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+            storePassword = keystoreProperties['storePassword']
         }
     }
 
