--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,11 @@ jobs:
       with:
         distribution: 'temurin'
         java-version: '17'
+    - name: Setup Linux build deps
+      uses: awalsh128/cache-apt-pkgs-action@latest
+      with:
+        packages: ninja-build libgtk-3-dev
+        version: 1.0
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
@@ -39,13 +44,17 @@ jobs:
         echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
         echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
         echo "storeFile=${{ env.STORE_FILE }}" >> android/key.properties
-    - name: Build Flutter
+    - name: Build Android
       run: flutter build apk --split-per-abi --target-platform android-arm64,android-arm --split-debug-info build/app/outputs/symbols
+    - name: Build Linux
+      run: flutter build linux --split-debug-info build/app/outputs/symbols
+    - name: Zip Linux build
+      run: zip -qq -r ./build/linux/x64/release/linux-x84.zip *
+      working-directory: build/linux/x64/release/bundle
     - name: Create Release
       uses: ncipollo/release-action@v1
       with:
-        artifacts: ./build/app/outputs/flutter-apk/app-*-release.apk
-        artifactContentType: application/vnd.android.package-archive
+        artifacts: ./build/app/outputs/flutter-apk/app-*-release.apk,./build/linux/x64/release/linux-x84.zip
         token: ${{ secrets.GITHUB_TOKEN }}
         tag: v${{ steps.yaml.outputs.data }}
         skipIfReleaseExists: true
