--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -1,4 +1,4 @@
-name: Build APKs
+name: Build Linux
 on: [push]
 
 jobs:
@@ -17,15 +17,10 @@ jobs:
       with:
         file: './pubspec.yaml' # File to read from
         key-path: '["version"]' # Access the runs key then the using key and retuns the value.
-    - name: Setup Java
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin'
-        java-version: '17'
     - name: Setup Linux build deps
       uses: awalsh128/cache-apt-pkgs-action@latest
       with:
-        packages: ninja-build libgtk-3-dev
+        packages: ninja-build libgtk-3-dev libmpv2
         version: 1.0
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
@@ -36,16 +31,6 @@ jobs:
         cache-path: "${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:"
         pub-cache-key: "flutter-pub:os:-:channel:-:version:-:arch:-:hash:"
         pub-cache-path: "${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:"
-    - name: Build KeyStore
-      run: echo ${{ secrets.STORE_BASE64 }} | base64 -d > ${{ env.STORE_FILE }}
-    - name: Write key.properties
-      run: |
-        echo "storePassword=${{ secrets.STORE_PASSWORD }}" > android/key.properties
-        echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
-        echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
-        echo "storeFile=${{ env.STORE_FILE }}" >> android/key.properties
-    - name: Build Android
-      run: flutter build apk --split-per-abi --target-platform android-arm64,android-arm --split-debug-info build/app/outputs/symbols
     - name: Build Linux
       run: flutter build linux --split-debug-info build/app/outputs/symbols
     - name: Zip Linux build
@@ -54,7 +39,7 @@ jobs:
     - name: Create Release
       uses: ncipollo/release-action@v1
       with:
-        artifacts: ./build/app/outputs/flutter-apk/app-*-release.apk,./build/linux/x64/release/linux-x84.zip
+        artifacts: ./build/linux/x64/release/linux-x84.zip
         token: ${{ secrets.GITHUB_TOKEN }}
         tag: v${{ steps.yaml.outputs.data }}
         skipIfReleaseExists: true
