--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Setup Linux build deps
       uses: awalsh128/cache-apt-pkgs-action@latest
       with:
-        packages: ninja-build libgtk-3-dev libmpv2
+        packages: ninja-build libgtk-3-dev libmpv-dev
         version: 1.0
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
