--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -37,7 +37,9 @@ jobs:
         echo "storePassword=${{ secrets.STORE_PASSWORD }}" > android/key.properties
         echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
         echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
-        echo "storeFile=${{ env.STORE_FILE }}" >> android/key.properties
+        echo "storeFile=${{ env.STORE_FILE }}" >> android/key.properties 
+    - name: Get Flutter pubs
+      run: flutter pub get
     - name: Build Android
       run: flutter build apk --split-per-abi --target-platform android-arm64,android-arm --split-debug-info build/app/outputs/symbols
     - name: Create Release
