--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -30,6 +30,8 @@ jobs:
         cache-key: "flutter-:os:-:channel:-:version:-:arch:-:hash:"
         cache-path: "${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:"
         pub-cache-key: "flutter-pub:os:-:channel:-:version:-:arch:-:hash:"
+    - name: Get Flutter pubs
+      run: flutter pub get
     - name: Build Linux
       run: flutter build linux --split-debug-info build/app/outputs/symbols
     - name: Zip Linux build
