--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
         echo "storePassword=${{ secrets.STORE_PASSWORD }}" > android/key.properties
         echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
         echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
-        echo "storeFile=${{ env.STORE_FILE }}" >> android/key.properties 
+        echo "storeFile=${{ env.STORE_FILE }}" >> android/key.properties
     - name: Get Flutter pubs
       run: flutter pub get
     - name: Build Android
@@ -84,3 +84,31 @@ jobs:
       with:
         name: linux-artifact
         path: ./build/linux/x64/release/bundle/linux-x64.zip
+  # Windows build
+  windows:
+    runs-on: windows-latest
+    permissions:
+      contents: write
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Setup Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        channel: stable
+        cache: true
+        cache-key: "flutter-:os:-:channel:-:version:-:arch:-:hash:"
+        cache-path: "${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:"
+        pub-cache-key: "flutter-pub:os:-:channel:-:version:-:arch:-:hash:"
+    - name: Get Flutter pubs
+      run: flutter pub get
+    - name: Build Windows
+      run: flutter build windows --split-debug-info build\app\outputs\symbols
+    - name: Zip Windows build
+      run: zip -qq -r windows-x64.zip *
+      working-directory: .\build\windows\runner\Release
+    - name: Upload Build Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: windows-artifact
+        path: .\build\windows\runner\Release\windows-x64.zip
