--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -104,8 +104,12 @@ jobs:
       run: flutter pub get
     - name: Build Windows
       run: flutter build windows --split-debug-info build\app\outputs\symbols
-    - name: Zip Windows build
-      run: zip -qq -r windows-x64.zip *
+    - name: Zip windows dir
+      uses: thedoctor0/zip-release@0.7.5
+      with:
+        type: 'zip'
+        directory: .\build\windows\x64\runner\Release
+        filename: 'windows-x64.zip'
       working-directory: .\build\windows\x64\runner\Release
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v4
