publish posts and better embed ui

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,4 +33,5 @@ jobs:
           artifacts: /tmp/artifacts/**/*
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: v${{ steps.yaml.outputs.data }}
+          generateReleaseNotes: true
           skipIfReleaseExists: true
