--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.1.3
+version: 0.1.4
 
 environment:
   sdk: ^3.5.3
@@ -39,6 +39,7 @@ dependencies:
   media_kit_libs_video: ^1.0.5
   flutter_native_splash: ^2.4.2
   package_info_plus: ^8.1.0
+  bluesky_text: ^0.6.9
 
 dev_dependencies:
   flutter_test:
