--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,7 @@ on:
       - lib/**
       - android/**
       - linux/**
+      - windows/**
       - pubspec.yaml
       - pubspec.lock
 
@@ -20,7 +21,7 @@ jobs:
       STORE_FILE: "/tmp/keystore.jks"
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Setup Java
       uses: actions/setup-java@v3
       with:
@@ -58,7 +59,7 @@ jobs:
       contents: write
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Setup Linux build deps
       uses: awalsh128/cache-apt-pkgs-action@latest
       with:
@@ -91,7 +92,7 @@ jobs:
       contents: write
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
