--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.1.6
+version: 0.1.7
 
 environment:
   sdk: ^3.5.3
@@ -40,6 +40,7 @@ dependencies:
   flutter_native_splash: ^2.4.2
   package_info_plus: ^8.1.0
   bluesky_text: ^0.6.9
+  file_picker: ^8.0.7
 
 dev_dependencies:
   flutter_test:
