handle created at

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   package_info_plus: ^8.1.0
   bluesky_text: ^0.6.9
   file_picker: ^8.0.7
+  get_time_ago: ^2.0.0
 
 dev_dependencies:
   flutter_test:
