--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.1.9
+version: 0.1.10
 
 environment:
   sdk: ^3.5.3
@@ -34,13 +34,14 @@ dependencies:
   shared_preferences: ^2.3.2
   url_launcher: ^6.3.1
   dynamic_color: ^1.7.0
-  media_kit: ^1.1.11
-  media_kit_video: ^1.2.5
-  media_kit_libs_video: ^1.0.5
   package_info_plus: ^8.1.0
   bluesky_text: ^0.6.9
   file_picker: ^8.0.7
   get_time_ago: ^2.0.0
+  video_player: ^2.9.2
+  video_player_media_kit: ^1.0.5
+  media_kit_libs_linux: ^1.1.3
+  media_kit_libs_windows_video: ^1.0.10
 
 dev_dependencies:
   flutter_test:
