--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   video_player_media_kit: ^1.0.5
   media_kit_libs_linux: ^1.1.3
   media_kit_libs_windows_video: ^1.0.10
+  share_plus: ^10.0.0
 
 dev_dependencies:
   flutter_test:
