--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.1.14
+version: 0.1.15
 
 environment:
   sdk: ^3.5.3
@@ -31,11 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
   bluesky: ^0.17.1
+  bluesky_text: ^0.6.10
   shared_preferences: ^2.3.2
   url_launcher: ^6.3.1
   dynamic_color: ^1.7.0
   package_info_plus: ^8.1.0
-  bluesky_text: ^0.6.10
   file_picker: ^8.0.7
   get_time_ago: ^2.0.0
   video_player: ^2.9.2
@@ -43,6 +43,8 @@ dependencies:
   media_kit_libs_linux: ^1.1.3
   media_kit_libs_windows_video: ^1.0.10
   share_plus: ^10.0.0
+  flutter_cache_manager: ^3.4.1
+  cached_network_image: ^3.4.0
 
 dev_dependencies:
   flutter_test:
