--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   photo_view: ^0.15.0
   go_router: ^14.6.0
   cupertino_icons: ^1.0.8
+  flutter_native_splash: ^2.4.2
 
 dev_dependencies:
   flutter_test:
@@ -70,3 +71,8 @@ dev_dependencies:
 flutter:
   generate: true
   uses-material-design: true
+
+flutter_native_splash:
+  color: "#add8e6"
+  android_12:
+    color: "#add8e6"
